symphony/assets/css/symphony.frames.css
/* ... */
.frame > ol > li.ordering .content fieldset,
.frame > ul > li.ordering .content fieldset {
	border-top-color: #7093c3;
}

.frame > ol > li.highlight,
.frame > ul > li.highlight {
	background: #e8e8e8;
}

.frame > ol > li.ordering header:before,
.frame > ul > li.ordering header:before {
	border-left: 6px solid #cedaea;
	border-right: 3px solid #7c9bc7;
}

.frame > ol > li.ordering header.sidebar:before,
.frame > ul > li.ordering header.sidebar:before {
	border-left: 6px solid #7c9bc7;
	border-right: 3px solid #cedaea;
}

/* Destructor */

.frame > ol > li header .destructor,
.frame > ul > li header .destructor,
.frame > ol > li header .button,
.frame > ul > li header .button {
	position: absolute;
	top: 8px;
	right: 10px;
	color: #aeaeae;
	border-bottom: none;
	font-weight: normal;
	margin: 0;
}

.frame > ol > li header .destructor:hover,
.frame > ul > li header .destructor:hover,
.frame > ol > li header .button:hover,
.frame > ul > li header .button:hover,
.frame > ol + fieldset .constructor:hover,
.frame > ol + fieldset .constructor:hover {
	color: #494949;
}

.frame > ol > li header .destructor.disabled,
.frame > ul > li header .destructor.disabled,
.frame > ol > li header .button.disabled,
.frame > ul > li header .button.disabled,
.frame > ol + fieldset .constructor.disabled,
.frame > ol + fieldset .constructor.disabled {
	color: #adadad;
	cursor: not-allowed;
	opacity: 0.4;
}

/* Templates */

.frame .template {
	display: none;
}

/*--------------------------------------------------------------------------
	Controls
--------------------------------------------------------------------------*/

.frame .apply {
	clear: left;
	cursor: default;
	margin: 10px 0 0;
	text-align: right;
	position: relative;
	border-color: rgba(0, 0, 0, 0.25);
}

.frame .apply:hover {
	border-color: rgba(0, 0, 0, 0.4);
}

.frame .actions {
	margin: 0 0 7px;
	height: 20px;
}

.frame .actions button {
	float: right;
}

/*-----------------------------------------------------------------------------
	Invalid states
-----------------------------------------------------------------------------*/

.invalid {
	background: #eb6347;
	border: 1px solid #c31;
	padding: 10px;
	margin: 0 0 15px;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	display: block;
	color: #fff;
	-webkit-border-radius: 4px;
	border-radius: 4px;
}

.invalid p {
	clear: both;
	margin: 0;
}

.invalid p,
.invalid a {
	color: rgba(255, 255, 255, 0.7);
}

.invalid a:hover {
	color: #fff;
}

.invalid label {
	margin-bottom: 10px;
}

.invalid i {
	color: rgba(255, 255, 255, 0.5);
}

